--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3465,119 +3465,85 @@ footer p a:hover {
 	margin-top: 20px;
 	margin-bottom: 20px;
 }
-
-/* The actual timeline (the vertical ruler) */
-.vi_timeline {
+.timeline {
     position: relative;
-    max-width: 900px;
-    margin: 0 auto;
+    z-index: 0;
 }
 
-/* The actual timeline (the vertical ruler) */
-.vi_timeline::after {
-    content: '';
+.timeline:before {
+    content: " ";
     position: absolute;
-    width: 6px;
-    background-color: #eee;
     top: 0;
-    bottom: 0;
-    left: 50%;
-    margin-left: -3px;
-}
-
-/* Container around content */
-.vi_container {
-    padding: 10px 40px;
-    position: relative;
-    background-color: inherit;
-    width: 50%;
-}
-
-/* The circles on the timeline */
-.vi_container::after {
-    content: '';
-    position: absolute;
-    width: 25px;
-    height: 25px;
-    right: -17px;
-    background-color: #eee;
-    border: 4px solid #FF9F55;
-    top: 15px;
-    border-radius: 50%;
-    z-index: 1;
-}
-
-/* Place the container to the left */
-.vi_left {
     left: 0;
+    right: 0;
+    bottom: 60px;
+    width: 4px;
+    margin: 0 auto;
+    background-color: #1da1f2;
+    border-radius: 2px;
 }
 
-/* Place the container to the right */
-.vi_right {
-    left: 50%;
-}
-
-/* Add arrows to the left container (pointing right) */
-.vi_left::before {
-    content: " ";
-    height: 0;
-    position: absolute;
-    top: 22px;
-    width: 0;
-    z-index: 1;
-    right: 30px;
-    border: medium solid white;
-    border-width: 10px 0 10px 10px;
-    border-color: transparent transparent transparent white;
-}
-
-/* Add arrows to the right container (pointing left) */
-.vi_right::before {
-    content: " ";
-    height: 0;
-    position: absolute;
-    top: 22px;
-    width: 0;
-    z-index: 1;
-    left: 30px;
-    border: medium solid white;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
-}
-
-/* Fix the circle for containers on the right side */
-.vi_right::after {
-    left: -16px;
-}
-
-/* The actual content */
-.vi_content {
-    padding: 20px 30px;
-    background-color: #eee;
+.timeline .nav > li {
     position: relative;
-    border-radius: 6px;
+    width: 50%;
+    padding-right: 30px;
+    z-index: 0;
 }
 
-@media screen and (max-width: 600px) {
-  /* Place the timelime to the left */
-  .vi_timeline::after {
-    left: 31px;
-  }
-  .vi_container {
-    width: 100%;
-    padding-left: 70px;
-    padding-right: 25px;
-  }
-  .vi_container::before {
-    left: 60px;
-    border: medium solid white;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
-  }
-  .vi_left::after, .vi_right::after {
-    left: 15px;
-  }
-  .vi_right {
-    left: 0%;
-  }
+.timeline .nav > li:before {
+    content: " ";
+    position: absolute;
+    top: 30px;
+    right: -8px;
+    width: 15px;
+    height: 15px;
+    background-color: #1da1f2;
+    border-radius: 50%;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+    z-index: 0;
+}
+
+.timeline .nav > li:after {
+    content: " ";
+    position: absolute;
+    top: 37px;
+    right: 0;
+    width: 60px;
+    height: 1px;
+    background-color: #e5e5e5;
+    z-index: -1;
+}
+
+.timeline .nav > li:nth-child(even) {
+    padding-left: 30px;
+    padding-right: 0;
+}
+
+.timeline .nav > li:nth-child(even):before {
+    left: -8px;
+    right: auto;
+}
+
+.timeline .nav > li:nth-child(even):after {
+    left: 0;
+    right: auto;
+}
+
+.timeline .nav > li:nth-child(2) {
+    margin-top: 60px;
+}
+
+.timeline--item {
+    position: relative;
+    background-color: #fff;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
+    z-index: 1;
+}
+
+.timeline--content {
+    padding: 14px 20px;
+}
+
+.timeline--footer {
+    padding: 4px 20px;
 }
